trying to fix the bug with the hover color not covering the navbar height

--- a/css/style.css
+++ b/css/style.css
@@ -117,10 +117,11 @@ p {
   
   /* overflow: auto; */
   /* padding: 1rem 1rem; */
+  margin: 10 auto;
 }
 
 #navbar a {
-  color: white;
+ 
 }
 
  #navbar ul {
@@ -141,8 +142,8 @@ p {
   display: block;
   text-decoration: none;
   font-size: 1.2rem;
-  padding:1rem;
   
+  color: white;
   
 } 
 
